Fix modal being behind the WP menus

--- a/css/src/new-settings.css
+++ b/css/src/new-settings.css
@@ -41,6 +41,10 @@
 			yst-shadow-none
 			checked:before:yst-hidden;
 		}
+
+		.yst-modal {
+			z-index: 100000 !important;
+		}
 	}
 }
 
